[tool.poetry]
name = "projet-graphe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
matplotlib = "^3.7.3"
seaborn = "^0.12.2"
networkx = "^3.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^23.9.1"}
isort = "^5.12.0"
flake8 = "^6.1.0"
nbqa = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
